<resources>
    <string name="app_name">BoatApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Boat App</string>
    <string name="nav_header_subtitle">My Boat</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Homes</string>
    <string name="menu_info">Mes Infos</string>
    <string name="menu_restaurant">Restaurants</string>
    <string name="menu_shopping">Shopping</string>
    <string name="menu_escale">Escales</string>
    <string name="menu_actualite">Actualités</string>

</resources>